fix: vertically align first row footer items

--- a/static/css/SCSS/layout.scss
+++ b/static/css/SCSS/layout.scss
@@ -18,6 +18,10 @@ body {
   background-color: #ffffff;
 }
 
+#extended-footer {
+  margin-top: -5px;
+}
+
 .footer {
   flex-shrink: 0;
 }
